app/assets/stylesheets/idea.css.sass
#idea
  +box-shadow(0 1px 2px #aaa)
  +border-radius(5px)
  padding: 10px
  background:
    color: #FFF
  header
    border-bottom: 1px solid #CCC
    padding-bottom: 10px
    h1
      width: auto
      margin: 0 60px 5px 0
    .idea_stats
      color: #666
      span
        font-family: "Gill Sans", sans-serif
        font-weight: lighter
        font-size: 1.1em
  .utils
    font-size: 0.9em
    overflow: hidden
    margin-bottom: 20px
    background: #FFF
    padding: 5px
    .totals
      float: left
      margin: 0
    li
      display: inline
      padding: 0
      background:
        image: url(asset_path("sprite.png", "image"))
        repeat: no-repeat
        position: 1px 2px
      padding-left: 18px
      float: left
      margin-right: 10px
    .comments
      background:
        position: 1px -16px
    .forks
      background:
        position: 1px -33px
  .act
    float: right
    margin: 0

  article, .page_body
    margin: 10px 0
    clear: both
    p
      font-size: 1.2em
  .editable
    overflow: hidden
    position: relative
    padding-left: 25px
    background: url(asset_path('editable_icon.png', 'image')) no-repeat left 5px
    &:hover
      background:
        color: #FFF
        color: rgba(255, 255, 255, 0.4)
      cursor: pointer
    &.editing:hover
      background:
        color: transparent
    form
      margin-left: -25px
      overflow: hidden
      textarea
        min-height: 200px
      button
        margin: 15px 5px
        float: right
        text-transform: uppercase
        letter-spacing: 1px
        border: none
        background:
          color: darken($lightgreen, 40%)
        color: #FFF
        cursor: pointer
        +border-radius(3px)
        &[type="cancel"]
          background:
            color: lighten($darkred, 20%)
          &:hover
            background:
              color: lighten($darkred, 30%)
        &:hover
          background:
            color: darken($lightgreen, 30%)

  .edit_message, .collab
    color: darken($lightyellow, 65%)
    padding: 20px 10px
    text-align: center
    background:
      color: $lightyellow
    border: 1px solid darken($lightyellow, 40%)
    outline: 2px solid #FFF
    margin: 20px 0

  .collab
    margin: 0 0 20px 0
    text-align: left
    padding: 0
    h3
      font-size: 1.3em
      padding: 10px
      margin: 0
      background: 
        color: darken($lightyellow, 40%)
    ul
      li
        padding: 10px



#comments
  margin: 20px 0 0 0

